fix: replaced custom spacing with bs classes

--- a/src/assets/scss/base/_variable.scss
+++ b/src/assets/scss/base/_variable.scss
@@ -1,1 +1,7 @@
 $font-family: "Montserrat", sans-serif;
+
+// Utilities
+$enable-negative-margins: true;
+
+// Card
+$card-border-width: 0;
